# meta-ai-openenv-email

./: .gitignore  Dockerfile  app.py  env.py  gmail.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  oauth.py
