[project]
name = "email-triage-env"
version = "0.1.0"
description = "OpenEnv email classification environment"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core",
    "openai"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"

[tool.uv.sources]
openenv-core = { git = "https://github.com/meta-pytorch/OpenEnv.git" }